--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
     <main class="wrap group">
         <aside class="sidebar">
            <div class="my-info">
-               <a href="/"><img src="images/ray.jpg" alt="Ray Bogman" class="portfolio-image"></a>
-               <h1>Ray Bogman</h1>
-               <h2>Magento Doctor <br> CTO & Founder SupportDesk B.V. & Rapido Internet Solutions B.V.</h2>
+               <a href="/"><img src="images/magento2cookbook.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
+               <h1>Magento 2 Cookbook</h1>
+               <h2>More than 50 indepth Magento recipies</h2>
                <div class="social group">
                    <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
-                   <a target="_blank" href="https://twitter.com/raybogman"><i class="fa fa-twitter-square fa-2x"></i><span class="fontawesome-text">Twitter</span></a>
-                   <a target="_blank" href="http://www.slideshare.net/jiraict"><i class="fa fa-slideshare fa-2x"></i><span class="fontawesome-text">Slideshare</span></a>
-                   <a target="_blank" href="https://prezi.com/user/raybogman/"><i class="fa fa-file-powerpoint-o fa-2x"></i><span class="fontawesome-text">Prezi</span></a>
 		</div>
            </div>
            <nav class="menus">
