--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main class="wrap group">
         <aside class="sidebar">
            <div class="my-info">
-               <a href="/"><img src="images/magento2cookbook.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
+               <a href="/"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
                <h1>Magento 2 Cookbook</h1>
                <h2>More than 50 indepth Magento recipies</h2>
                <div class="social group">
