--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                <h1>Magento 2 Cookbook</h1>
                <h2>More than 50 indepth Magento recipies</h2>
                <div class="social group">
-                   <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
+                   <a target="_blank" href="https://github.com/mage2cookbook/"><i class="fa fa-git-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
 		</div>
            </div>
            <nav class="menus">
