--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
            <div class="my-info">
                <a href="/"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
                <h1>Magento 2 Cookbook</h1>
-               <h2>More than 50 indepth Magento recipies</h2>
+               <h2>Ray Bogman & Vladimir Kerkhoff</h2>
+	       <h3>More than 400 pages and 50 indepth Magento 2 recipies</h2>
                <div class="social group">
                    <a target="_blank" href="https://github.com/mage2cookbook/"><i class="fa fa-git-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
+		    <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Ray Bogman</span></a>
+                     <a target="_blank" href="https://www.linkedin.com/in/vladimirkerkhoff"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Vladimir Kerkhoff</span></a>
 		</div>
            </div>
            <nav class="menus">
