--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/dummy.jpg" alt="">
+                <img src="images/portfolio/dummy.jpg" alt="">
               </div>
             </div>
            
@@ -68,7 +68,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/dummy.jpg" alt="">
+                <img src="images/portfolio/dummy.jpg" alt="">
               </div>
             </div>
 
@@ -85,62 +85,6 @@
     	closeBtnInside: true
 	});
 	
-	$('.open-popup-testimonials').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>All testimonials can be found on my Linkedin page, some of them are in Dutch, some English</p><a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a></div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
-	$('.open-popup-hobbies').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>Besides my computer and photography hobby, I love to run 2/3 times a week and crosstrain. In the winter I love snowboarding and iceskating.</p><p>Going to concert and music festivals is one of my other great passions. I travel all over the world to see my favorite bands.</p><div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
-	$('.open-popup-education').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>In 1997 I graduated from the Hospitality Management School in the Netherlands after a internship in Orlando, FL (Marriott Orlando World Center).</p><div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
-	$('.open-popup-skills').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>My skill set is quite diverse. Here is a short list of my expert skills:<br><br>Linux</br>Unix</br>Windows</br>Apache</br>Nginx</br>PHP</br>HHVM</br>MySQL</br>MSSQL</br>DirectAdmin</br>Web/Mobile Performance [WPO]</br>Magento</br>Joomla</br>OroCRM</br>Varnish</br>Loadtesting</br>Webpagetest</br>Web Security</br>SEO</br>HTML</br>CSS</br>Trainer/Speaker</br>Product/Business Development</br></p><div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
-	$('.open-popup-summary').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>After graduation and my internship at Marriotts Orlando World Center I moved back to Amsterdam where I worked for Marriott in Amsterdam.</p><p>From 1998 until 2000 I worked at Hotel Mercure Amsterdam as Assistent F&B Manager and Sysadmin.<p><p>In 2000 I changed profession and joined the KPN Telecom team in Amsterdam deploying ADSL internet in the Netherlands. After setting up a servicedesk and creating custom applications for customer support I became Application Manager of the customer support software stack.</p><p>In 2004 I joined the KPN CERT team as Senior Security Manager until 2007.</p><p>While working at KPN I started as an entrepreneur in 2005 and started building webapplications using Open Source Software like Mambo and later Joomla! for clients.</p><p>Medio 2007 I left KPN to spend fulltime focus on Jira ICT which I co-founded in 2006. Our main focus was building, training and hosting Joomla! software for small business and enterprise clients.</p><p>2008 was the first year for Magento, which became a big part of my business life. In 2009 we founded Yireo an international company selling Magento and Joomla! extentions and sharing knowledge in a subscription based tutorial site.</p><p>While Jira ICT and Yireo grew bigger a split was inevitable in October 2011. From that point on I focused 100% on Jira ICT doing mainly Magento training and consultancy.</p><p>While Magento got bigger and bigger in the Netherlands and the need for Support was strongly growing I co-founded SupportDesk with a old KPN colleague in 2013.</p>At SupportDesk my role as CTO is sharing e-commerce and Magento knownledge with all support engineers. Besides sharing I coach the team on a daily basis for quality control. Also creating product and business solutions internally or for clients.<p>After gaining experience in the world of Magento performance I created an image optimization solution for Magento, which is build on a SaaS platform was launched as Rapido Internet Solutions at the end of 2014.</p><div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
-	$('.open-popup-speaker').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>Sharing knowledge is one of my pleasures, so I am a regular speaker at Magento, Joomla, Mobile, Performance and E-commerce events world-wide.</p><p>Here is a list of some of the events:</p><p>Joomladays Netherlands (since 2005)</br>Meet Magento Netherlands (since 2009)</br>Magento Developers Paradise (Summer and Winter editions since 2010)</br>Meet Magento Germany (2010)</br>Bargento France (2011)</br>J and Beyound (2011)</br>Webwinkelvakdagen (2013-2014)</br>M-Commerce Event (2014)</br>Webperfdays Amsterdam (since 2013)</br>Meet Magento Zwiterland (2014)</br>Magento Live UK (2015)</br></p><p>Besides speaking at events I host a monthly Magento User Group in Amsterdam since 2010. Also sharing knowledge as the Magento Doctor at Meet Magento events since 2012</p><div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
-	$('.open-popup-clients').magnificPopup({
-        items: {
-                src: '<div class="white-popup"><p>Throughout my entrepreneur years I served many clients all over the world. The following frameworks where used in most of the projects: Joomla/Mambo, Drupal, Magento.</p><p>Here is a short list of some of my clients:</br></br>Safeshops BV [Condoom Anoniem]</br>Justbrands BV [PME Legend, Vangard]</br>Claudia Strater</br>Hunkemoller</br>Byte Internet BV</br>CloudVPS BV</br>Feyenoord Fanshop</br>KPN Telecom</br>Vodafone Telecom</br>2organize</br><KiKa</br>Duijvestein-wintersport BV</br>Pietzoomers BV</br>Yourtablet BV</br>Yumeko BV</br></p><div>',
-                type: 'inline'
-        },
-        closeBtnInside: true
-        });
-
         $('.open-popup-published').magnificPopup({
         items: {
                 src: '<div class="white-popup"><p>Over the last couple of years I published some articles for Web Designer Magazine in the Netherlands regarding Magento.</p><p>For Packtpub an international printing company I performed book reviews on a regular basis regarding Magento. The following titles have been reviewed:</p><p><ul><li>Mastering Magento [book]</li><li>Mastering Magento [video]</li><li>Mastering Magento Theme Design</li><li>Learning Magento Theme Development</li></ul></p><div>',
