--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script>
 	$('.open-popup-contact').magnificPopup({
     	items: {
-        	src: '<div class="white-popup"><p>Ray Bogman</br>Palfrenier 34</br>1188DP Amstelveen</br>The Netherlands</br></br>7 augustus 1974</br><a href="mailto:bogman@bogman.info?subject=RE:Portfolio - Ray Bogman">bogman@bogman.info</a></br><a href="tel:+31610884153">00 31 6 1088 4153</a></br></p></div>',
+        	src: '<div class="white-popup"><p>Ray Bogman</br></br></br><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p></div>',
         	type: 'inline'
     	},
     	closeBtnInside: true
