--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script>
 	$('.open-popup-contact').magnificPopup({
     	items: {
-        	src: '<div class="white-popup"><p>Ray Bogman</br></br></br><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p></div>',
+        	src: '<div class="white-popup"><p>Ray Bogman</br><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p><p>Vladimir Kerkhoff</br><a href="mailto:vladimir@genmato.com?subject=RE:Magento 2 Cookbook - Vladimir Kerkhoff">vladimir@genmato.com</a></br></p></div>',
         	type: 'inline'
     	},
     	closeBtnInside: true
