--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
 		</div>
            </div>
            <nav class="menus">
-               <h3 class="work">Work</h3>
+               <h3 class="work">Chapters</h3>
 	       <ul>
-                   <li><a href="#" class="open-popup-summary">Summary</a></li>
+                   <li><a href="#" class="open-popup-ch1">Install Magento 2 on Apache and Nginx</a></li>
+                   <li><a href="#" class="open-popup-ch2">Magento 2 system tools</a></li>
+                   <li><a href="#" class="open-popup-ch3">Enable performance in Magento 2</a></li>
+                   <li><a href="#" class="open-popup-ch4">Create catalog and categories</a></li>
+                   <li><a href="#" class="open-popup-ch5">Managing your store</a></li>
+                   <li><a href="#" class="open-popup-ch6">Creating a custom Magento 2 theme</a></li>
+                   <li><a href="#" class="open-popup-ch7">Create a Magento 2 extension (basics)</a></li>
+                   <li><a href="#" class="open-popup-ch8">Create a Magento 2 extension (advanced)</a></li>
 	       </ul>
 
                <h3 class="about">About</h3>
                <ul>
-                   <li><a href="#" class="open-popup-skills">Skills</a></li>
+                   <li><a href="#" class="open-popup-book">About the Book</a></li>
                </ul>
 
                <h3 class="contact">Contact</h3>
@@ -87,9 +94,9 @@
     	closeBtnInside: true
 	});
 	
-        $('.open-popup-published').magnificPopup({
+        $('.open-popup-ch1').magnificPopup({
         items: {
-                src: '<div class="white-popup"><p>Over the last couple of years I published some articles for Web Designer Magazine in the Netherlands regarding Magento.</p><p>For Packtpub an international printing company I performed book reviews on a regular basis regarding Magento. The following titles have been reviewed:</p><p><ul><li>Mastering Magento [book]</li><li>Mastering Magento [video]</li><li>Mastering Magento Theme Design</li><li>Learning Magento Theme Development</li></ul></p><div>',
+                src: '<div class="white-popup"><p></p><div>',
                 type: 'inline'
         },
         closeBtnInside: true
