--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="INDEX,FOLLOW"/>
     <link rel="stylesheet" href="css/20150816203525.css">
+    <link rel="canonical" href="https://mage2cookbook.com"/>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
