--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 	       <h3>More than 400 pages and 50 indepth Magento 2 recipies</h2>
                <div class="social group">
                    <a target="_blank" href="https://github.com/mage2cookbook/"><i class="fa fa-git-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
-		    <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Ray Bogman</span></a>
-                     <a target="_blank" href="https://www.linkedin.com/in/vladimirkerkhoff"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Vladimir Kerkhoff</span></a>
+		   <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Ray Bogman</span></a>
+                   <a target="_blank" href="https://www.linkedin.com/in/vladimirkerkhoff"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Vladimir Kerkhoff</span></a>
+                   <a target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Buy Magento 2 Cookbook</span></a>
 		</div>
            </div>
            <nav class="menus">
