--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                    <a target="_blank" href="https://github.com/mage2cookbook/"><i class="fa fa-git-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
 		   <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Ray Bogman</span></a>
                    <a target="_blank" href="https://www.linkedin.com/in/vladimirkerkhoff"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Vladimir Kerkhoff</span></a>
-                   <a target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Buy Magento 2 Cookbook</span></a>
+                   <a target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook"><i class="fa fa-shopping-cart fa-2x"></i><span class="fontawesome-text">Buy Magento 2 Cookbook</span></a>
 		</div>
            </div>
            <nav class="menus">
