--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	
         $('.open-popup-ch1').magnificPopup({
         items: {
-                src: '<div class="white-popup"><p></p><div>',
+                src: '<div class="white-popup"><h3>Install Magento 2 on Apache and Nginx</h3><p>Installing Magento 2 is a total different ball game compared to Magento 1. Where Magento 1 could be installed thru FTP or SSH for an experienced webmaster is Magento 2 only installable via the command-line interface (SSH). A major change installing Magento is the need to use Composer. Currently Apache and Nginx are still one of the most used webservers to use with Magento.</p><div>',
                 type: 'inline'
         },
         closeBtnInside: true
