--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
         },
         closeBtnInside: true
         });
+	
+	 $('.open-popup-ch2).magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Magento 2 system tools</h3><p>Managing Magento 2 via the command shell is new. Magento released a new powerful tool to manage and install sample data,reindex your database, backup your site or flush your caches are just a few of the options.</p><ul><li>Installing Magento 2 sample data via GUI</li><li>Installing Magento 2 sample data via command-line</li><li>Managing Magento 2 indexes via command-line</li><li>Managing Magento 2 cache via command-line</li><li>Managing Magento 2 backup via command-line</li><li>Transferring your Magento 1 database to Magento 2</li><li>Managing Magento 2 on Docker</li></li></ul><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
 
 	$(function() {
 
