--- a/index.html
+++ b/index.html
@@ -122,6 +122,53 @@
         closeBtnInside: true
         });
 
+        $('.open-popup-ch3').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Enable performance in Magento 2</h3><p>To really use the performance of Magento 2 you can enable different type of caching options. The basic caching for configuration and session can be stored in Redis. In Magento 2 the Full Page Cache (FPC) can be handled by Varnish to give your store a performance boost. But there are also external services that you can use as a cache.</p><ul><li>Configuring Redis for configuration cache</li><li>Configuring Memcached for session caching</li><li>Configuring Varnish as the Full Page Cache</li><li>Configuring Magento 2 with Cloudflare</li><li>Configuration optimized images in Magento 2</li><li>Configuration Magento 2 with HTTP/2</li><li>Configuration Magento 2 performance testing</li></ul><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+        $('.open-popup-ch4').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Create catalog and categories</h3><p></p><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+        $('.open-popup-ch5').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Managing your store</h3><p></p><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+        $('.open-popup-ch6').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Creating a custom Magento 2 theme<p></p><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+        $('.open-popup-ch7').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Create a Magento 2 extension (basics)<h3><p></p><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+        $('.open-popup-ch8').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Create a Magento 2 extension (advanced)</h3><p></p><div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
 
 	$(function() {
 
