--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         $('.open-popup-ch4').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Create catalog and categories</h3><p></p><div>',
+                src: '<div class="white-popup"><h3>Create catalog and categories</h3><p>Creating a Root catalog is one of the major elements of a Magento store before creating products. Creating the correct product type incl attributes is an important step in setting up a Magento store.</p><ul><li>Creating a ROOT catalog</li><li>Creating subcategories</li><li>Managing attribute set</li><li>Creating products</li><li>Managing products in catalog grid</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
