--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         $('.open-popup-ch5').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Managing your store</h3><p></p><div>',
+                src: '<div class="white-popup"><h3>Managing your store</h3><p>Managing your Magento store on a daily bases is important. Setting up the correct TAX rules, configuring inventory of creating customer groups are just a small example of managing your store.</p><ul><li>Creating shipping and tax rules</li><li>Managing customer groups</li><li>Configuring inventory</li><li>Configuring currency rates</li><li>Managing advanced pricing</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
