--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         $('.open-popup-ch6').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Creating a custom Magento 2 theme<p></p><div>',
+                src: '<div class="white-popup"><h3>Creating a custom Magento 2 theme<p>Learn how to create your own theme, based on the Magento 2 Blank theme and how to use the fallback to create ‘seasonal variations’. Explains how the new theme is setup and where files are stored.</p><ul><li>Creating a new theme</li><li>Configuring the fallback to a parent theme</li><li>Changing specific page handle with a layout update</li><li>Adding CSS/JS to pages</li><li>Creating variations of your theme</li><li>Defering js loading thru layout xml</li><li>Changing the template for a current block</li><li>Registering and activating your theme in your store</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
@@ -156,7 +156,7 @@
 
         $('.open-popup-ch7').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Create a Magento 2 extension (basics)<h3><p></p><div>',
+                src: '<div class="white-popup"><h3>Create a Magento 2 extension (basics)<h3><p>Learn how to create a basic extension for Magento 2 and the basic functions needed to use it in a Magento 2 installation. Contains a brief introduction to new methods introduced in the Magento 2 framework and examples how to create basic functions.</p><ul><li>Initialising extension basics</li><li>Working with Database models</li><li>Creating tables using setup scripts</li><li>Creating a web route and controllers to display data</li><li>Creating system configuration fields</li><li>Creating a backend data grid</li><li>Creating a backend form to add/edit data</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
@@ -164,7 +164,7 @@
 
         $('.open-popup-ch8').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Create a Magento 2 extension (advanced)</h3><p></p><div>',
+                src: '<div class="white-popup"><h3>Create a Magento 2 extension (advanced)</h3><p>Learn how to use advanced features within extensions for Magento 2. Also includes how to add unit-/functional tests as this is a new requirement for extensions listed on the new Magento Connect.</p><ul><li>Using dependency injection to pass classes to your own class</li><li>Modifying output with the use of Plugins (Interceptions)</li><li>Creating your own .xml module config file</li><li>Creating your own product type</li><li>Working with service layers/contract</li><li>Creating a Magento CLI command option</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
