--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         $('.open-popup-ch6').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Creating a custom Magento 2 theme<h3><p>Learn how to create your own theme, based on the Magento 2 Blank theme and how to use the fallback to create ‘seasonal variations’. Explains how the new theme is setup and where files are stored.</p><ul><li>Creating a new theme</li><li>Configuring the fallback to a parent theme</li><li>Changing specific page handle with a layout update</li><li>Adding CSS/JS to pages</li><li>Creating variations of your theme</li><li>Defering js loading thru layout xml</li><li>Changing the template for a current block</li><li>Registering and activating your theme in your store</li></ul><div>',
+                src: '<div class="white-popup"><h3>Creating a custom Magento 2 theme</h3><p>Learn how to create your own theme, based on the Magento 2 Blank theme and how to use the fallback to create ‘seasonal variations’. Explains how the new theme is setup and where files are stored.</p><ul><li>Creating a new theme</li><li>Configuring the fallback to a parent theme</li><li>Changing specific page handle with a layout update</li><li>Adding CSS/JS to pages</li><li>Creating variations of your theme</li><li>Defering js loading thru layout xml</li><li>Changing the template for a current block</li><li>Registering and activating your theme in your store</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
