--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         $('.open-popup-ch7').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Create a Magento 2 extension (basics)<h3><p>Learn how to create a basic extension for Magento 2 and the basic functions needed to use it in a Magento 2 installation. Contains a brief introduction to new methods introduced in the Magento 2 framework and examples how to create basic functions.</p><ul><li>Initialising extension basics</li><li>Working with Database models</li><li>Creating tables using setup scripts</li><li>Creating a web route and controllers to display data</li><li>Creating system configuration fields</li><li>Creating a backend data grid</li><li>Creating a backend form to add/edit data</li></ul><div>',
+                src: '<div class="white-popup"><h3>Create a Magento 2 extension (basics)</h3><p>Learn how to create a basic extension for Magento 2 and the basic functions needed to use it in a Magento 2 installation. Contains a brief introduction to new methods introduced in the Magento 2 framework and examples how to create basic functions.</p><ul><li>Initialising extension basics</li><li>Working with Database models</li><li>Creating tables using setup scripts</li><li>Creating a web route and controllers to display data</li><li>Creating system configuration fields</li><li>Creating a backend data grid</li><li>Creating a backend form to add/edit data</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
