--- a/index.html
+++ b/index.html
@@ -98,14 +98,6 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='js/jquery.magnific-popup.min.js'></script>
     <script>
-	$('.open-popup-contact').magnificPopup({
-    	items: {
-        	src: '<div class="white-popup"><p>Ray Bogman</br><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p><p>Vladimir Kerkhoff</br><a href="mailto:vladimir@genmato.com?subject=RE:Magento 2 Cookbook - Vladimir Kerkhoff">vladimir@genmato.com</a></br></p></div>',
-        	type: 'inline'
-    	},
-    	closeBtnInside: true
-	});
-	
         $('.open-popup-ch1').magnificPopup({
         items: {
                 src: '<div class="white-popup"><h3>Install Magento 2 on Apache and Nginx</h3><p>Installing Magento 2 is a total different ball game compared to Magento 1. Where Magento 1 could be installed thru FTP or SSH for an experienced webmaster is Magento 2 only installable via the command-line interface (SSH). A major change installing Magento is the need to use Composer. Currently Apache and Nginx are still one of the most used webservers to use with Magento.</p><ul><li>Installing Magento 2 on Apache</li><li>Installing Magento 2 on Nginx</li><li>Installing PHP-PFM</li><li>Installing HHVM</li><li>Installing MySQL</li><li>Installing Magento 2</li><li>Installing Magento 2 on Hypernode</li></ul><div>',
@@ -169,6 +161,24 @@
         },
         closeBtnInside: true
         });
+
+  	$('.open-popup-contact').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><p>Ray Bogman</br><a href="mailto:ray@bogman.info?subject=RE:Magento 2 Cookbook - Ray Bogman">ray@bogman.info</a></br></p><p>Vladimir Kerkhoff</br><a href="mailto:vladimir@genmato.com?subject=RE:Magento 2 Cookbook - Vladimir Kerkhoff">vladimir@genmato.com</a></br></p></div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+  	$('.open-popup-book').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>About the Book</h3><p></p></div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+
 
 	$(function() {
 
