--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <script>
         $('.open-popup-ch1').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Install Magento 2 on Apache and Nginx</h3><p>Installing Magento 2 is a total different ball game compared to Magento 1. Where Magento 1 could be installed thru FTP or SSH for an experienced webmaster is Magento 2 only installable via the command-line interface (SSH). A major change installing Magento is the need to use Composer. Currently Apache and Nginx are still one of the most used webservers to use with Magento.</p><ul><li>Installing Magento 2 on Apache</li><li>Installing Magento 2 on Nginx</li><li>Installing PHP-PFM</li><li>Installing HHVM</li><li>Installing MySQL</li><li>Installing Magento 2</li><li>Installing Magento 2 on Hypernode</li></ul><div>',
+                src: '<div class="white-popup"><h3>Install Magento 2 on Apache and Nginx</h3><p>Installing Magento 2 is a total different ball game compared to Magento 1. Where Magento 1 could be installed thru FTP or SSH for an experienced webmaster is Magento 2 only installable via the command-line interface (SSH). A major change installing Magento is the need to use Composer. Currently Apache and Nginx are still one of the most used webservers to use with Magento.</p><ul><li>Installing Magento 2 on Apache</li><li>Installing Magento 2 on Nginx</li><li>Installing PHP-PFM</li><li>Installing HHVM</li><li>Installing MySQL</li><li>Installing Magento 2</li><li>Installing Magento 2 on Hypernode</li><li>Managing Magento 2 on Docker</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
@@ -108,7 +108,7 @@
 	
 	$('.open-popup-ch2').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>Magento 2 system tools</h3><p>Managing Magento 2 via the command shell is new. Magento released a new powerful tool to manage and install sample data,reindex your database, backup your site or flush your caches are just a few of the options.</p><ul><li>Installing Magento 2 sample data via GUI</li><li>Installing Magento 2 sample data via command-line</li><li>Managing Magento 2 indexes via command-line</li><li>Managing Magento 2 cache via command-line</li><li>Managing Magento 2 backup via command-line</li><li>Transferring your Magento 1 database to Magento 2</li><li>Managing Magento 2 on Docker</li></li></ul><div>',
+                src: '<div class="white-popup"><h3>Magento 2 system tools</h3><p>Managing Magento 2 via the command shell is new. Magento released a new powerful tool to manage and install sample data,reindex your database, backup your site or flush your caches are just a few of the options.</p><ul><li>Installing Magento 2 sample data via GUI</li><li>Installing Magento 2 sample data via command-line</li><li>Managing Magento 2 indexes via command-line</li><li>Managing Magento 2 cache via command-line</li><li>Managing Magento 2 backup via command-line</li><li>Transferring your Magento 1 database to Magento 2</li></ul><div>',
                 type: 'inline'
         },
         closeBtnInside: true
