--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
            
             <div class="portfolio-item group">
               <div class="portfolio-info">
-                <div class="date">Dummy 2016</div>
+                <div class="date">January 2016</div>
                 <div class="description">
-                  Dummy
+                  First accouncement Magento 2 Cookbook by Packt Publishing.
                 </div>
                 <div class="meta">
                   <p><strong>Role:</strong> </p>
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/dummy.jpg" alt="">
+                <img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
               </div>
             </div>
 
