--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   First accouncement Magento 2 Cookbook by Packt Publishing.
                 </div>
                 <div class="meta">
-                  <p><strong>Role:</strong> </p>
+                  <p><strong>Url</strong><a target="_new" href="https://www.packtpub.com/web-development/magento-2-cookbook" alt="Packt Publishing - Magento 2 Cookbook">Packt Publishing</a></p>
                 </div>
               </div>
               <div class="portfolio-image">
