--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@
             
 	    <div class="portfolio-item group first">
               <div class="portfolio-info">
-                <div class="date">Dummy</div>
+                <div class="date">February 2016</div>
                 <div class="description">
-                  Dummy
+                  Buy Magento 2 Cookbook at Amazon.
                 </div>
                 <div class="meta">
-                  <p><strong>Role:</strong> Dummy</p>
-                  <p><strong>Tags:</strong> Dummy </p>
+                  <p><strong>URL</strong><a target="_new" href="http://www.amazon.com/Magento-2-Cookbook-Ray-Bogman/dp/1785887068/" alt="Amazon - Magento 2 Cookbook"> Amazon</a></p>
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/dummy.jpg" alt="">
+                <img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
               </div>
             </div>
            
@@ -85,7 +84,7 @@
                   First accouncement Magento 2 Cookbook by Packt Publishing.
                 </div>
                 <div class="meta">
-                  <p><strong>Url</strong><a target="_new" href="https://www.packtpub.com/web-development/magento-2-cookbook" alt="Packt Publishing - Magento 2 Cookbook">Packt Publishing</a></p>
+                  <p><strong>URL</strong><a target="_new" href="https://www.packtpub.com/web-development/magento-2-cookbook" alt="Packt Publishing - Magento 2 Cookbook"> Packt Publishing</a></p>
                 </div>
               </div>
               <div class="portfolio-image">
