--- a/index.html
+++ b/index.html
@@ -61,8 +61,23 @@
            </nav>
         </aside>
         <div class="content">
+	
+	  <div class="portfolio-item group first">
+              <div class="portfolio-info">
+                <div class="date">February 2016</div>
+                <div class="description">
+                  Magento 2 Cookbook listed at Dutchento.
+                </div>
+                <div class="meta">
+                  <p><strong>URL </strong><a target="_new" href="https://www.dutchento.org/je-kennis-vergroten-met-deze-boeken-over-magento-2/" alt="Dutchento - Magento 2 Cookbook">Dutchento</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
+              </div>
+            </div>
             
-	    <div class="portfolio-item group first">
+	    <div class="portfolio-item group">
               <div class="portfolio-info">
                 <div class="date">February 2016</div>
                 <div class="description">
