--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
               <div class="portfolio-info">
                 <div class="date">February 2016</div>
                 <div class="description">
+                  Magento 2 Cookbook at Shoppimon Webinar.
+                </div>
+                <div class="meta">
+                  <p><strong>URL </strong><a target="_new" href="https://www.youtube.com/watch?v=Khhn3IRD7QE" alt="Shoppimon - Magento 2 Migration">Shoppimon</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
+              </div>
+            </div>
+
+	  <div class="portfolio-item group">
+              <div class="portfolio-info">
+                <div class="date">February 2016</div>
+                <div class="description">
                   Magento 2 Cookbook listed at Dutchento.
                 </div>
                 <div class="meta">
