--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
   	$('.open-popup-book').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>About the Book</h3><p></p></div>',
+                src: '<div class="white-popup"><h3>About the Book</h3><p></p><h3>Media files</h3><p>The following media files can be used for promotions</p><ul><li><a href="/images/media/mage2cookbook-large.jpg">Large</a></li></ul></div>',
                 type: 'inline'
         },
         closeBtnInside: true
