--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                    <li><a href="#" class="open-popup-ch8">Create a Magento 2 extension (advanced)</a></li>
 	       </ul>
 
-               <h3 class="about">About</h3>
+               <h3 class="about">About/Media</h3>
                <ul>
                    <li><a href="#" class="open-popup-book">About the Book</a></li>
                </ul>
@@ -88,7 +88,7 @@
                   <p><strong>URL </strong><a target="_new" href="https://www.dutchento.org/je-kennis-vergroten-met-deze-boeken-over-magento-2/" alt="Dutchento - Magento 2 Cookbook">Dutchento</a></p>
                 </div>
               </div>
-              <div class="portfolio-image">
+              <div class="portfolio-image">/
                 <img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
               </div>
             </div>
@@ -202,7 +202,7 @@
 
   	$('.open-popup-book').magnificPopup({
         items: {
-                src: '<div class="white-popup"><h3>About the Book</h3><p></p><h3>Media files</h3><p>The following media files can be used for promotions</p><ul><li><a href="/images/media/mage2cookbook-large.jpg">Large</a></li></ul></div>',
+                src: '<div class="white-popup"><h3>About the Book</h3><p></p><h3>Media files</h3><p>The following media files can be used for promotions</p><ul><li><a href="/images/media/mage2cookbook-large.jpg" alt="Magento 2 Cookbook - Media Large">Large</a></li><li><a href="/images/media/mage2cookbook-medium.jpg" alt="Magento 2 Cookbook - Media Medium">Medium</a></li><li><a href="/images/media/mage2cookbook-small.jpg" alt="Magento 2 Cookbook - Media Small">Small</a></li></ul></div>',
                 type: 'inline'
         },
         closeBtnInside: true
