--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="robots" content="INDEX,FOLLOW"/>
     <link rel="stylesheet" href="css/20150816203525.css">
     <link rel="canonical" href="https://mage2cookbook.com"/>
+    <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
