--- a/index.html
+++ b/index.html
@@ -62,8 +62,23 @@
            </nav>
         </aside>
         <div class="content">
+
+	<div class="portfolio-item group first">
+              <div class="portfolio-info">
+                <div class="date">March 2016</div>
+                <div class="description">
+                  How to Get Involved in the Magento Community.
+                </div>
+                <div class="meta">
+                  <p><strong>Blog </strong><a target="_new" href="https://magento.com/blog/technical/how-get-involved-magento-community" alt="Magento Blog - How to Get Involved in the Magento Community ">Magento Blog</a></p>
+                </div>
+              </div>
+              <div class="portfolio-image">
+                <img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
+              </div>
+          </div>
 	
-	  <div class="portfolio-item group first">
+	  <div class="portfolio-item group">
               <div class="portfolio-info">
                 <div class="date">February 2016</div>
                 <div class="description">
