--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                <a href="/"><img src="images/magento2cookbook-250.jpg" alt="Magento 2 Cookbook" class="portfolio-image"></a>
                <h1>Magento 2 Cookbook</h1>
                <h2>Ray Bogman & Vladimir Kerkhoff</h2>
-	       <h3>More than 400 pages and 50 indepth Magento 2 recipies</h2>
+	       <h3>More than 400 pages and 50 indepth Magento 2 recipies</h3>
                <div class="social group">
-                   <a target="_blank" href="https://github.com/mage2cookbook/"><i class="fa fa-git-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
-		   <a target="_blank" href="https://nl.linkedin.com/in/raybogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Ray Bogman</span></a>
-                   <a target="_blank" href="https://www.linkedin.com/in/vladimirkerkhoff"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Vladimir Kerkhoff</span></a>
-                   <a target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook"><i class="fa fa-shopping-cart fa-2x"></i><span class="fontawesome-text">Buy Magento 2 Cookbook</span></a>
+                   <a target="_blank" href="https://github.com/mage2cookbook/" title="Github Magento 2 Cookbook"><i class="fa fa-git-square fa-2x"></i><span class="fontawesome-text">Linkedin</span></a>
+		   <a target="_blank" href="https://nl.linkedin.com/in/raybogman" title="Linkedin Ray Bogman"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Ray Bogman</span></a>
+                   <a target="_blank" href="https://www.linkedin.com/in/vladimirkerkhoff" title="Linkedin Vladimir Kerkhoff"><i class="fa fa-linkedin-square fa-2x"></i><span class="fontawesome-text">Vladimir Kerkhoff</span></a>
+                   <a target="_blank" href="https://www.packtpub.com/web-development/magento-2-cookbook" title="Packtpub Magento 2 Bookbook"><i class="fa fa-shopping-cart fa-2x"></i><span class="fontawesome-text">Buy Magento 2 Cookbook</span></a>
 		</div>
            </div>
            <nav class="menus">
