--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/community-magento2cookbook.png" title="Magento 2 Cookbook at Magento Community blog">
+                <img src="images/portfolio/community-magento2cookbook.png" alt="Magento 2 Cookbook at Magento Community blog">
               </div>
           </div>
 	
@@ -90,7 +90,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/shoppimon-magento2cookbook.png" title="Magento 2 Cookbook at Shoppimon Webinar">
+                <img src="images/portfolio/shoppimon-magento2cookbook.png" alt="Magento 2 Cookbook at Shoppimon Webinar">
               </div>
             </div>
 
@@ -105,7 +105,7 @@
                 </div>
               </div>
               <div class="portfolio-image">/
-                <img src="images/portfolio/dutchento-magento2cookbook.png" title="Magento 2 Cookbook listed at Dutchento">
+                <img src="images/portfolio/dutchento-magento2cookbook.png" alt="Magento 2 Cookbook listed at Dutchento">
               </div>
             </div>
             
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/amazon-magento2cookbook.png" title="Buy Magento 2 Cookbook at Amazon">
+                <img src="images/portfolio/amazon-magento2cookbook.png" alt="Buy Magento 2 Cookbook at Amazon">
               </div>
             </div>
            
@@ -135,7 +135,7 @@
                 </div>
               </div>
               <div class="portfolio-image">
-                <img src="images/portfolio/packtpub-magento2cookbook.png" title="First announcement Magento 2 Cookbook">
+                <img src="images/portfolio/packtpub-magento2cookbook.png" alt="First announcement Magento 2 Cookbook">
               </div>
             </div>
 
