--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ⚡>
+<html ⚡ lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Magento 2 Cookbook - 400 pages and 50 indepth Magento 2 recipies, written by Ray Bogman & Vladimir Kerkhoff"/>
