--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                <h3 class="about">About/Media</h3>
                <ul>
                    <li><a href="#" class="open-popup-book">About the Book</a></li>
+                   <li><a href="#" class="open-popup-sitemap">Sitemap</a></li>
                </ul>
 
                <h3 class="contact">Contact</h3>
@@ -219,6 +220,14 @@
   	$('.open-popup-book').magnificPopup({
         items: {
                 src: '<div class="white-popup"><h3>About the Book</h3><p></p><h3>Media files</h3><p>The following media files can be used for promotions</p><ul><li><a href="/images/media/mage2cookbook-large.jpg" alt="Magento 2 Cookbook - Media Large">Large (2000px)</a></li><li><a href="/images/media/mage2cookbook-medium.jpg" alt="Magento 2 Cookbook - Media Medium">Medium (1000px)</a></li><li><a href="/images/media/mage2cookbook-small.jpg" alt="Magento 2 Cookbook - Media Small">Small (200px)</a></li></ul></div>',
+                type: 'inline'
+        },
+        closeBtnInside: true
+        });
+
+	$('.open-popup-sitemap').magnificPopup({
+        items: {
+                src: '<div class="white-popup"><h3>Sitemap</h3></div>',
                 type: 'inline'
         },
         closeBtnInside: true
